--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ Day01/cmake-build-debug/CMakeFiles/CMakeOutput.log
 Day01/cmake-build-debug/CMakeFiles/Day01.dir/main.c.o
 Day01/cmake-build-debug/CMakeFiles/rules.ninja
 Day01/cmake-build-debug/Testing/Temporary/LastTest.log
+*.log
